# strava_prediction

./: .cache.sqlite  .gitignore  Dockerfile  README.md  data.dvc  definitions.py  pyproject.toml
.dvc/: config
.github/workflows/: deploy_api.yml  deploy_gui.yml  evaluate_past_predictions.yml  fetch_process_validate_split.yml  test_train_models.yml
gx/: great_expectations.yml
gx/checkpoints/: is_active_checkpoint.yml  kudos_checkpoint.yml
gx/expectations/: .ge_store_backend_id  is_active_new_suite.json  is_active_suite.json  kudos_suite.json  new_kudos_suite.json
reports/: is_active_report.txt  kudos_report.txt
reports/evidently/: index.html  is_active_report.html  is_active_results.html  kudos_drift_report.html  kudos_report.html  kudos_results.html
src/: .env  settings.py
src/client/: Dockerfile  index.html  package-lock.json  package.json
src/client/src/: App.css  App.jsx  index.css  main.jsx
src/client/src/components/: ActivitiesRow.jsx  Admin.jsx  Header.jsx  HeaderPageName.jsx  Home.jsx  IframeComponent.jsx  Kudos.jsx  Predictions.jsx  Reports.jsx
src/client/src/components/graphs/: IsActivePredictionChart.jsx  IsActiveTrainMetricsChart.jsx  KudosPredictionChart.jsx  KudosTrainMetricsChart.jsx
src/common/: refresh_token.py
src/data/: .cache.sqlite  evidently_test.py  fetch_strava.py  fetch_weather.py  merge_data.py  preprocess_strava.py  preprocess_weather.py  split_data.py  validate_data.py  weather.py
src/database/: connector.py
src/models/: evaluate_is_active.py  evaluate_kudos.py  evaluate_predictions.py  mlflow_helper.py  model_helper.py  predict-testing.py  predict.py  train_is_active.py  train_kudos.py
src/serve/: serveApi.py
tests/: test_weather_api.py
